# Advent-of-Code-2024

./: Cargo.toml  README.md  all.py  all.rs
Day 01/Python/: sol.py
Day 01/Rust/: sol.rs
Day 02/Python/: sol.py
Day 02/Rust/: sol.rs
Day 03/Python/: sol.py
Day 03/Rust/: sol.rs
Day 04/Python/: sol.py
Day 04/Rust/: sol.rs
Day 05/Python/: sol.py
Day 05/Rust/: sol.rs
Day 06/Python/: sol.py
Day 06/Rust/: sol.rs
Day 07/Python/: sol.py
Day 07/Rust/: sol.rs
Day 08/Python/: sol.py
Day 08/Rust/: sol.rs
Day 09/Python/: sol.py
Day 09/Rust/: sol.rs
Day 10/Python/: sol.py
Day 10/Rust/: sol.rs
Day 11/Python/: sol.py
Day 11/Rust/: sol.rs
Day 12/Python/: sol.py
Day 12/Rust/: sol.rs
Day 13/Python/: sol.py
Day 13/Rust/: sol.rs
Day 14/Python/: sol.py
Day 14/Rust/: sol.rs
Day 15/Python/: sol.py
Day 15/Rust/: sol.rs
Day 16/Python/: sol.py
Day 16/Rust/: sol.rs
Day 17/Python/: sol.py
Day 17/Rust/: sol.rs
Day 18/Python/: sol.py
Day 18/Rust/: sol.rs
Day 19/Python/: sol.py
Day 19/Rust/: sol.rs
Day 20/Python/: sol.py
Day 20/Rust/: sol.rs
Day 21/Python/: sol.py
Day 21/Rust/: sol.rs
Day 22/Python/: sol.py
Day 22/Rust/: sol.rs
Day 23/Python/: sol.py
Day 23/Rust/: sol.rs
Day 24/Python/: sol.py
Day 24/Rust/: sol.rs
stub/Python/: sol.py
stub/Rust/: sol.rs
